--- a/_config.yml
+++ b/_config.yml
@@ -19,77 +19,84 @@ facebook_username:
 instagram_username: 
 
 # Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
 # gtm: "GTM-0000000"
 # gtag: "UA-00000000-0"
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: ABOUT ME # Title for the section
+# about_title: ABOUT ME
 about_profile_image: images/123.jpg
-about_content: | # this will include new lines to allow paragraphs
- Mechanically inclined and motivated professional seeking an <mark>Apprenticeship</mark> to apply and grow my skills in troubleshooting, repair, and maintenance. With over five years of hands-on experience operating and servicing heavy machinery, I am eager to build <mark>a long-term career</mark> in the skilled trades through hard work, technical ability, and a strong commitment to learning.
+about_content: |
+  Mechanically inclined and motivated professional seeking an <mark>Apprenticeship</mark> to apply and grow my skills in troubleshooting, repair, and maintenance. With over five years of hands-on experience operating and servicing heavy machinery, I am eager to build <mark>a long-term career</mark> in the skilled trades through hard work, technical ability, and a strong commitment to learning.
+
 content:
-  - title: PROFESSIONAL EXPERIENCE # Title for the section
-    layout: list # Type of content section (list/text)
+  - title: HIGHLIGHTS OF QUALIFICATIONS
+    layout: text
+    content: |
+      - Bachelor’s Degree in Operation, Machinery and Equipment of Agribusiness 
+      - DL Class 1 and owns a vehicle
+      - Computer: MS Office (Word, Excel, PowerPoint), Internet and email
+      - Languages: English (CLB 6), Russian, and Ukrainian (native)
+      - Standard First Aid Level C (CPR); H2S Alive; CSO; Fall protection
+
+  - title: PROFESSIONAL EXPERIENCE
+    layout: list
     content:
       - layout: left
-        title: Centurion Canada Rentals & Service​s, AB, Canada
+        title: Centurion Canada Rentals & Services, AB, Canada
         link: https://centurioncrs.com/
         link_text: centurioncrs.com
         sub_title: Federal Vac Driver/Field Technician
         caption: July 2023 – Present
-        description: | # this will include new lines to allow paragraphs
-           * Install, repair, and maintain plumbing systems, insulation, and heat traces for industrial and oilfield equipment
-           * Measure, cut, and assemble piping systems using hand and power tools
-           * Perform mechanical troubleshooting, including diagnosing and fixing generators (55KW, 60KW, JCB) and electrical system failures
-           * Conduct routine maintenance on pumps, breakers, and various rig-site equipment, ensuring optimal operation
-           * Work in extreme weather conditions while adhering to strict safety procedures
-           * Operate and maintain a Class 3 VAC truck and trailer, gaining experience with hydraulics and fluid management systems
-           * Skilled in replacing and installing full trailer wiring systems, reconnecting components, and inspecting, servicing, and replacing trailer bearings
+        description: |
+          * Install, repair, and maintain plumbing systems, insulation, and heat traces for industrial and oilfield equipment
+          * Measure, cut, and assemble piping systems using hand and power tools
+          * Perform mechanical troubleshooting, including diagnosing and fixing generators (55KW, 60KW, JCB) and electrical system failures
+          * Conduct routine maintenance on pumps, breakers, and various rig-site equipment, ensuring optimal operation
+          * Work in extreme weather conditions while adhering to strict safety procedures
+          * Operate and maintain a Class 3 VAC truck and trailer, gaining experience with hydraulics and fluid management systems
+          * Skilled in replacing and installing full trailer wiring systems, reconnecting components, and inspecting, servicing, and replacing trailer bearings
       - layout: left
-        title: Lariagra Farms  Ltd, AB, Canada
+        title: Lariagra Farms Ltd, AB, Canada
         link: https://www.sunterrafarms.ca/
         link_text: sunterrafarms.ca
         sub_title: Farrowing Technician
-        caption: August 2021 – June 2023 
-        description: | # this will include new lines to allow paragraphs
-           * Provided livestock services such as artificial insemination, assisted pregnant sows and sorted new-borns
-           * Recognized and treated certain livestock health problems, and maintained livestock performance records
-           * Worked closely with all staff to meet monthly farrowing and mortality targets
-           * Cultivated optimal conditions for breeding success, consistently meeting or exceeding farrowing and mortality targets by 15% through precise environmental adjustments and data-driven animal care strategies
-           * Vaccinated animals according to farm protocols
+        caption: August 2021 – June 2023
+        description: |
+          * Provided livestock services such as artificial insemination, assisted pregnant sows and sorted new-borns
+          * Recognized and treated certain livestock health problems, and maintained livestock performance records
+          * Worked closely with all staff to meet monthly farrowing and mortality targets
+          * Cultivated optimal conditions for breeding success, consistently meeting or exceeding farrowing and mortality targets by 15% through precise environmental adjustments and data-driven animal care strategies
+          * Vaccinated animals according to farm protocols
       - layout: left
         title: Coles Farms Inc, NC, USA
-        # link: boringcompany.com
-        # link_text: boringcompany.com
         sub_title: Farrowing/Breeding Technician
         caption: November 2019 – November 2020
-        description: | # this will include new lines to allow paragraphs
-           * Farrowing: assisted pregnant sows; weaned and sorted by sex piglets; sorted new-borns; pressure washing
-           * Breeding: bred sows and gilts - both artificial insemination and natural
-           * Vaccinated animals according to barn health protocol, fed and treated sick animals
-           * Barn maintenance and routine repair, record keeping
-           * Performed and executed the setting up, operation, and repair of farm machineries and equipment (Kubota tractor)
+        description: |
+          * Farrowing: assisted pregnant sows; weaned and sorted by sex piglets; sorted new-borns; pressure washing
+          * Breeding: bred sows and gilts - both artificial insemination and natural
+          * Vaccinated animals according to barn health protocol, fed and treated sick animals
+          * Barn maintenance and routine repair, record keeping
+          * Performed and executed the setting up, operation, and repair of farm machineries and equipment (Kubota tractor)
       - layout: left
         title: Westpork Pty Ltd, WA, Australia
         link: http://westpork.com.au/
         link_text: westpork.com.au
         sub_title: Machine Operator
         caption: September 2018 - October 2019
-        description: | # this will include new lines to allow paragraphs
-           + Cleaned pigsties and operated the farm equipment such as tractor Arion 620c, skid steer 226B, loader, telehandler (MLT-X732 and MLT-526) 
-           + Maintained the equipment by fueling daily, greasing, and checking hydraulic fluid levels
-           + Operated a forklift to unload hay from the transport trucks and delivered to the pig shelter
-           + Delivered piglets from one barn to another in a 3-ton truck
-           + Unscrew or tighten pipes and casing, using hand and power wrenches and tongs to ensure seamless operation of mechanical systems, contributing to equipment efficiency
+        description: |
+          + Cleaned pigsties and operated the farm equipment such as tractor Arion 620c, skid steer 226B, loader, telehandler (MLT-X732 and MLT-526)
+          + Maintained the equipment by fueling daily, greasing, and checking hydraulic fluid levels
+          + Operated a forklift to unload hay from the transport trucks and delivered to the pig shelter
+          + Delivered piglets from one barn to another in a 3-ton truck
+          + Unscrew or tighten pipes and casing, using hand and power wrenches and tongs to ensure seamless operation of mechanical systems, contributing to equipment efficiency
       - layout: left
         title: Centrum Valley Farms, IA, USA
         link: http://www.centrumvalleyfarms.com/
         link_text: centrumvalleyfarms.com
         sub_title: Barn Worker/Mechanic
         caption: March 2016 – March 2017
-        description: | # this will include new lines to allow paragraphs
+        description: |
           * Administered medications, inspected, repaired and installed motors, belts and ventilation system
           * Operated and maintained machines, inspected the final product, cleaned, sharpened, and lubricated tools and equipment
           * Removed broken limbs from wires, using hooked extension poles to enhance safety and operational efficiency, successfully reducing maintenance-related disruptions by 25%
@@ -98,47 +105,28 @@ content:
         link: https://www.valleyfair.com/
         link_text: valleyfair.com
         sub_title: Ride Operator
-        caption: June 2015  –September 2015
-        description: | # this will include new lines to allow paragraphs
+        caption: June 2015 – September 2015
+        description: |
           * Operated equipment that starts and shuts down ride, pull down safety bars, buckled seat belts
           * Enforced all safety regulations and stayed current with safety rules and procedures
           * Kept an eye on patrons and their movements to ensure they are not in any danger
-      - layout: left
-        title: 
-        # link: 
-        # link_text: 
-        sub_title: 
-        caption:  
-        description: | # this will include new lines to allow paragraphs
-          
 
-  - title: EDUCATION # Title for the section
-    layout: list # Type of content section (list/text)
+  - title: EDUCATION
+    layout: list
     content:
       - layout: left
         title: Mykolayiv State Agrarian University
         link: https://www.mnau.edu.ua/
         link_text: mnau.edu.ua
         caption: September 2012 – August 2017
-        sub_title: Bachelor’s Degree (4.28) 
+        sub_title: Bachelor’s Degree (4.28)
         quote: >
           Operation, Machinery and Equipment of Agribusiness
-        description: | # this will include new lines to allow paragraphs
-          Specialist in Operation, Machinery and Equipment of Agribusiness and able to solve unique tasks related to the maintenance and use of mechanized technologies of production, primary processing, storage and transportation of agricultural products. 
-
-  - title: HIGHLIGHTS OF QUALIFICATIONS
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      - Bachelor’s Degree in Operation, Machinery and Equipment of Agribusiness 
-      - DL Class 1 and owns a vehicle
-      - Computer: MS Office (Word, Excel, PowerPoint), Internet and email
-      - Languages: English (CLB 6), Russian, and Ukrainian (native)
-      - Standard First Aid Level C (CPR); H2S Alive; CSO; Fall protection
-
+        description: |
+          Specialist in Operation, Machinery and Equipment of Agribusiness and able to solve unique tasks related to the maintenance and use of mechanized technologies of production, primary processing, storage and transportation of agricultural products.
 
 # Footer
 footer_show_references: true
-# references_title: References on request (Override references text)
 
 # Build settings
 remote_theme: sproogen/resume-theme
